--- a/src/components/MissionCard.css
+++ b/src/components/MissionCard.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     width: 600px;
     margin-right: 25px;
     margin-left: 25px;
